# VoronoiDualContour

./: CMakeLists.txt  README.md  TODO.txt  algo.py  compExec.py  debug.cpp  debug.h  dmr.cpp  dmr.h  dmr_commandline.cpp  dmr_commandline.h  dmr_cube.cpp  dmr_cube.h  dmr_debug.cpp  dmr_debug.h  dmr_delaunay.cpp  dmr_delaunay.h  dmr_exp.cpp  dmr_globalvar.cpp  dmr_globalvar.h  dmr_grid.cpp  dmr_grid.h  dmr_io.cpp  dmr_io.h  dmr_latest_stable.cpp  dmr_lp.cpp  dmr_type.h  dmr_utilities.cpp  dmr_utilities.h  dmr_voronoi.cpp  dmr_voronoi.h  dt.cpp  dt.h  getCubeCenter.py  io.cpp  io.h  nrrdCrop.cpp  processVolumeData.cpp  processVolumeData.py  test_vor.cpp  (+31 more)
buildLocal/: dmr
cgal_3d_mesh/: CMakeLists.txt  README.md  cgal_mesher.cpp
data/: cube-3x.nhdr  cube-3x.nrrd  cube-3x.raw  cube-5x.nhdr  cube-5x.nrrd  cube-5x.raw  engine-minD.nrrd  engine.nhdr  fuel.nhdr
include/: test_vor.h  vdc.h  vdc_commandline.h  vdc_debug.h  vdc_delaunay.h  vdc_func.h  vdc_grid.h  vdc_io.h  vdc_type.h  vdc_utilities.h  vdc_voronoi.h
include/algo/: vdc_func.h
include/core/: vdc.h  vdc_commandline.h  vdc_debug.h  vdc_stats.h  vdc_timing.h  vdc_type.h  vdc_utilities.h
include/delaunay/: vdc_delaunay.h
include/grid/: vdc_grid.h  vdc_sep_isov.h
include/io/: vdc_io.h
include/processing/: vdc_func.h  vdc_grid.h  vdc_sep_isov.h  vdc_voronoi.h
include/voronoi/: vdc_voronoi.h
mesh/: cube-3x.off  cube-5x.off  engine-minD.off  fuel-original.off  fuel.off  fuel.ply  mesh.off  neghip.off  resulting_mesh.ply  silicium.off
ref/: cube-3x.off  cube-5x.off
src/: test_modcyc.cpp  vdc.cpp  vdc_commandline.cpp  vdc_debug.cpp  vdc_func_delaunay.cpp  vdc_func_isosurface.cpp  vdc_func_modcyc.cpp  vdc_func_voronoi.cpp  vdc_grid.cpp  vdc_io.cpp  vdc_main.cpp  vdc_utilities.cpp  vdc_voronoi.cpp  vdc_voronoi_collapse.cpp  vdc_voronoi_core.cpp  vdc_voronoi_matching.cpp
src/algo/: vdc_func_delaunay.cpp  vdc_func_helper.cpp  vdc_func_isosurface.cpp  vdc_func_modcyc.cpp  vdc_func_voronoi.cpp
src/app/: vdc.cpp
src/core/: vdc_commandline.cpp  vdc_debug.cpp  vdc_stats.cpp  vdc_timing.cpp  vdc_utilities.cpp
src/grid/: vdc_grid.cpp  vdc_sep_isov.cpp  vdc_sep_isov_debug.cpp
src/io/: vdc_io.cpp
src/processing/: vdc_func_delaunay.cpp  vdc_func_helper.cpp  vdc_func_isosurface.cpp  vdc_func_modcyc.cpp  vdc_func_voronoi.cpp  vdc_grid.cpp  vdc_sep_isov.cpp  vdc_sep_isov_debug.cpp  vdc_voronoi_collapse.cpp  vdc_voronoi_core.cpp  vdc_voronoi_matching.cpp
src/testing/: test_modcyc.cpp  test_vor.cpp
src/tests/: test_modcyc.cpp  test_vor.cpp
src/voronoi/: vdc_voronoi_collapse.cpp  vdc_voronoi_core.cpp  vdc_voronoi_matching.cpp
t/: dmr  eighth_torus.off  eighth_torus.ply  fuel.off  fuel.ply  fuel_sep.off  fuel_sep.ply  fuel_sep_sup2.off  fuel_sep_sup2.ply  fuel_sep_sup3.off  fuel_sep_sup3.ply  fuel_sep_sup4.off  fuel_sep_sup4.ply  fuel_sup2.off  fuel_sup2.ply  fuel_sup3.off  fuel_sup3.ply  fuel_sup4.ply  neghip_sep.ply  neghip_sep_sup2.ply  neghip_sup2.ply
temps/: centers.txt  engine-minD.csv  isosurface_vertices.txt  plotVoronoi.py  scalar_values.txt  t-minD.csv  visCSV.py  voronoi_cells.txt  voronoi_vertices.txt
tools/: plot_degenerate_voronoi.py  plot_modcyc.py  run_vdc_batch.py
